...
            
            
            let login =  Store.shared.login(username: userName, adminPassword: password, storePassword: spass)
            if login {
                self.performSegue(withIdentifier: "login", sender: self)
            } else {
                self.display(title: "Login Failed", msg: "Please check credentials")
            }
        } else {
            self.display(title: "Error", msg: "Please enter all required fields")
        }
    }
    /*
...
